--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   fluttertoast: ^8.0.8
   firebase_crashlytics: ^2.5.3
   lottie: ^1.2.2
+  dotted_decoration: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +83,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^2.1.2+1
+
+flutter_native_splash:
+  image: images/hilmilogo.png
+  color: "#ddf4ff"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
