--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,11 @@ flutter:
   assets:
     - images/people.png
     - images/livraison.png
+    - images/administratif.jpg
+    - images/bricolage.png
+    - images/bienetre.png
+    - images/menage.png
+    - images/loisirs.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
